[project]
name = "photolog"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.2.3",
    "Flask-Login>=0.6.2",
    "Werkzeug>=2.2.3",
    "requests>=2.28.2",
    "PyYAML>=6.0",
    "Pillow>=3.0.0",
    "piexif>=1.0.2",
    "exifread>=2.1.2",
    "boto>=2.38.0",
    "flickrapi>=2.1.2",
    "gunicorn>=21.0",
]

[project.scripts]
start_api = "photolog.api.main:start"
start_queue = "photolog.queue.main:start"
start_web = "photolog.web.main:start"
upload2photolog = "photolog.tools.uploader:run"
prep_folder = "photolog.tools.prep_folder:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=9.0"]
